# jorge_real_estate_bots

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  jorge_launcher.py  pyproject.toml  pytest.ini  requirements.txt  test_phase1_integration.py  validate_seller_bot.py  verify_ghl_integration.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260206_000001_initial_schema.py
bots/buyer_bot/: buyer_bot.py  buyer_prompts.py  buyer_routes.py  main.py
bots/lead_bot/: main.py  models.py  routes_admin.py  routes_webhook.py  websocket_manager.py
bots/seller_bot/: __init__.py  jorge_seller_bot.py  main.py
bots/shared/: __init__.py  auth_middleware.py  auth_service.py  bot_metrics_collector.py  business_rules.py  cache_service.py  calendar_booking_service.py  claude_client.py  config.py  dashboard_data_service.py  dashboard_models.py  event_broker.py  event_models.py  ghl_client.py  lead_intelligence_optimized.py  logger.py  metrics_service.py  models.py  performance_tracker.py
command_center/: dashboard.py  dashboard_v3.py  event_client.py  production_monitor.py
database/: __init__.py  base.py  billing_models.py  models.py  repository.py  session.py
docs/: 02-ghl-setup-guide.md  06-remaining-work-to-finish.md
examples/: lead_intelligence_integration_example.py
scripts/: phase3c_integration_test.py  seed_demo_data.py  test_auth_system.py  test_real_data_integration.py  validate_seller_bot.py
tests/: conftest.py  test_ghl_webhook_security.py  test_jorge_seller_bot.py  test_red_team.py
tests/billing/: test_api.py  (+4 more)
(+51 files in other folders)
