[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "jorge-real-estate-bots"
version = "0.1.0"
description = "AI-powered real estate bot system with lead, buyer, and seller bots"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
